[package]
name = "qwen-burn"
version = "0.0.1-alpha2"
edition = "2021"

[lib]
name = "qwen_burn"

[dependencies]
burn = "0.20.1"
burn-ndarray = "0.20.1"
safetensors = "0.7.0"
memmap2 = "0.9"
half = { version = "2", features = ["num-traits"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Avoid tokenizers' esaxx_fast C++ build, which links the static CRT on Windows.
tokenizers = { version = "0.22", default-features = false, features = ["onig"] }
hf-hub = "0.5"
pyo3 = { version = "0.27", optional = true, features = ["abi3-py39", "extension-module"] }
numpy = { version = "0.27", optional = true }

[features]
default = []
python = ["dep:pyo3", "dep:numpy"]
